k8s-235/apps/logging-operator/overlays/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - logs.monitoring.tdude.co
    secretName: logs-monitoring-tdude-co-tls
  rules:
  - host: logs.monitoring.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-kb-http
            port:
              name: https
  # - host: elasticsearch.elk.nhackindustries.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: elasticsearch-es-http
  #           port:
  #             name: https
